# UVTemplate

uv_explorer/: .gitignore  README.md  pyproject.toml
uv_explorer/src/explorer/: main.py
uv_explorer/tests/: test_another_test_file.py  test_my_helpers.py
uv_explorer/tests/helpers/: test_add.py
